just a navigation graph

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -60,6 +60,7 @@ dependencies {
     implementation "androidx.compose.material:material:$compose_version"
     implementation "androidx.compose.ui:ui-tooling-preview:$compose_version"
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.4.1'
+    implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.4.1"
     implementation 'androidx.activity:activity-compose:1.4.0'
 
     // Compose Navigation
@@ -114,7 +115,7 @@ dependencies {
     implementation "androidx.palette:palette-ktx:1.0.0"
 
     // Splash API
-    implementation 'androidx.core:core-splashscreen:1.0.0-beta02'
+    implementation 'androidx.core:core-splashscreen:1.0.0-rc01'
 
     //Icons
     implementation "androidx.compose.material:material-icons-extended:$compose_version"
