--- a/app/build.gradle
+++ b/app/build.gradle
@@ -66,7 +66,7 @@ dependencies {
     implementation 'androidx.activity:activity-compose:1.5.0'
 
     // Compose Navigation
-    implementation("androidx.navigation:navigation-compose:2.5.0-rc01")
+    implementation("androidx.navigation:navigation-compose:2.5.0")
 
     // Room components
     implementation "androidx.room:room-runtime:2.4.2"
