--- a/app/build.gradle
+++ b/app/build.gradle
@@ -135,6 +135,9 @@ dependencies {
     implementation 'com.google.android.gms:play-services-base:18.0.1'
     implementation 'com.google.android.gms:play-services-tasks:18.0.1'
 
+    //Lottie
+    implementation 'com.airbnb.android:lottie:4.1.0'
+
     // Testing
     androidTestImplementation "androidx.test:runner:1.4.0"
     androidTestImplementation "androidx.test:rules:1.4.0"
